<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_supplier"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:layout_marginTop="8dp"
              android:weightSum="10"
              tools:context=".product.AddProductActivity">

    <ScrollView
            android:id="@+id/user_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

        <LinearLayout
                android:id="@+id/user_account_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <ImageView
                    android:id="@+id/featured_image"
                    android:layout_width="match_parent"
                    android:src="@drawable/product_image_placeholder"
                    android:layout_height="200dp" android:contentDescription="TODO"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/product_name"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" android:importantForAutofill="no"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:id="@+id/product_category_text_view"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_category"
                    android:maxLines="1"
                    android:singleLine="true"/>

            <Spinner
                    android:id="@+id/product_category"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/description"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/description"
                        android:inputType="text"
                        android:maxLines="5"
                        android:singleLine="false" android:importantForAutofill="no"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/stock"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/stock"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" android:importantForAutofill="no"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/price"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price"
                        android:inputType="number"
                        android:maxLines="1"
                        android:singleLine="true" android:importantForAutofill="no"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:id="@+id/add_product"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|center_vertical"
                        android:text="@string/add_product"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>