<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_supplier"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:layout_marginLeft="8dp"
              android:layout_marginRight="8dp"
              android:layout_marginTop="8dp"
              android:weightSum="10"
              tools:context=".product.RequestQuoteActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

        <LinearLayout
                android:id="@+id/request_quote_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/product_id"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_name"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/quantity"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantity"
                        android:inputType="textPersonName"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/unit_cost"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/unit_cost"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/total_amount"
                        android:fontFamily="sans-serif-light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/total_amount"
                        android:inputType="numberDecimal"
                        android:maxLines="1"
                        android:singleLine="true" android:autofillHints=""/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <Button
                        android:id="@+id/request_quote"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|center_vertical"
                        android:text="@string/request_quote"/>

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>