<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:padding="@dimen/activity_vertical_margin"
        android:fitsSystemWindows="true"
        tools:context=".customer.CustomerSignupActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">

        <android.support.v7.widget.CardView
                android:id="@+id/login_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@android:color/white"
                android:foreground="?attr/selectableItemBackground">
            <ScrollView
                    android:id="@+id/user_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingLeft="@dimen/activity_vertical_margin"
                        android:paddingStart="@dimen/activity_vertical_margin"
                        android:paddingRight="@dimen/activity_vertical_margin"
                        android:paddingEnd="@dimen/activity_vertical_margin"
                        android:paddingBottom="8dp">

                    <LinearLayout
                            android:id="@+id/user_account_form"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <RelativeLayout
                                android:gravity="center"
                                android:layout_width="match_parent"
                                android:layout_height="170dp"
                                android:padding="10dp">

                            <de.hdodenhof.circleimageview.CircleImageView
                                    android:id="@+id/profile_picture"
                                    android:layout_width="150dp"
                                    android:layout_height="150dp"
                                    app:border_color="@color/colorAccent"
                                    app:border_width="1dp"
                                    android:src="@drawable/user"/>

                            <ImageView
                                    android:id="@+id/upload_photo"
                                    android:layout_width="30dp"
                                    android:layout_height="30dp"
                                    android:elevation="4dp"
                                    android:layout_alignBottom="@+id/profile_picture"
                                    android:layout_alignRight="@+id/profile_picture"
                                    android:src="@drawable/photo_camera" android:contentDescription="TODO"/>

                        </RelativeLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <EditText
                                    android:id="@+id/first_name"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/first_name"
                                    android:inputType="textPersonName"
                                    android:maxLines="1"
                                    android:singleLine="true" android:autofillHints=""/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <EditText
                                    android:id="@+id/last_name"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/last_name"
                                    android:inputType="textPersonName"
                                    android:maxLines="1"
                                    android:singleLine="true" android:autofillHints=""/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <EditText
                                    android:id="@+id/company_name"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/company_name"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:singleLine="true" android:autofillHints=""/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <EditText
                                    android:id="@+id/email"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/email"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:singleLine="true" android:autofillHints=""/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <EditText
                                    android:id="@+id/phone"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/phone"
                                    android:inputType="phone"
                                    android:maxLines="1"
                                    android:singleLine="true" android:autofillHints=""/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <EditText
                                    android:id="@+id/location"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/location"
                                    android:inputType="textAutoComplete"
                                    android:maxLines="1"
                                    android:singleLine="true" android:autofillHints=""/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <EditText
                                    android:id="@+id/username"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/username"
                                    android:inputType="textPersonName"
                                    android:maxLines="1"
                                    android:singleLine="true" android:autofillHints=""/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <EditText
                                    android:id="@+id/password"
                                    android:fontFamily="sans-serif-light"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:maxLines="1"
                                    android:singleLine="true" android:autofillHints=""/>

                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                            <Button
                                    style="@style/Widget.AppCompat.Button.Colored"
                                    android:id="@+id/signup"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center|center_vertical"
                                    android:text="@string/signup"/>

                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>